featured flower and service info added

--- a/index.html
+++ b/index.html
@@ -19,10 +19,51 @@
         </div>
     </section>
     <section class="featured-flower">
-
+        <h2 class="featured-flower-title">
+            Our Featured Flowers
+        </h2>
+        <p class="featured-flower-boody">
+            It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+        </p>
+        <div class="featured-flower-photos">
+            <figure>
+                <img src="images/Flower Asset/pngwing 6.png" alt="" class="featured-flower-image ff-img-1">
+                <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
+            </figure>
+            <figure>
+                <img src="images/Flower Asset/pngwing 5.png" alt="" class="featured-flower-image ff-img-2">
+                <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
+            </figure>
+            <figure>
+                <img src="images/Flower Asset/pngwing 7.png" alt="" class="featured-flower-image ff-img-3">
+                <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
+            </figure>
+        </div>
+        <div class="service-info">
+            <figure>
+                <img src="images/Flower Asset/Group 57.png" alt="">
+                <figcaption style="margin-top: 10px; text-align: center;">Same Day Delivery. Click & Collect.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/Flower Asset/Group 58.png" alt="">
+                <figcaption style="margin-top: 10px; text-align: center;">Fresh Flowers. Local Growers.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/Flower Asset/Group 59.png" alt="">
+                <figcaption style="margin-top: 10px; text-align: center;">24/7 Free Support.</figcaption>
+            </figure>
+            
+        </div>
     </section>
     <section class="hot-deal">
-
+        <div class="hot-deal-text">
+            <h3>Hot Deal ! Sale Up To 25% Off</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <button class="btn-primary">Sign Up</button>
+        </div>
+        <div class="hot-deal-photo">
+            <img src="images/Flower Asset/pngwing 8.png" alt="" class="hot-deal-img">
+        </div>
     </section>
     <section class="instagram">
 
