hot deal part added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
     <section class="hot-deal">
         <div class="hot-deal-text">
-            <h3>Hot Deal ! Sale Up To 25% Off</h3>
+            <h3>Hot Deal ! Sale Up To 25% <span>Off</span></h3>
             <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
             <button class="btn-primary">Sign Up</button>
         </div>
