instagram part added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,18 @@
         </div>
     </section>
     <section class="instagram">
-
+        <h2 class="featured-flower-title">
+            Instagram
+        </h2>
+        <p class="featured-flower-boody">
+            It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+        </p>
+        <div class="instagram-photos">
+            <img src="images/Flower Asset/Flower 01.png" alt="" class="instagram-img">
+            <img src="images/Flower Asset/Rectangle 4.png" alt="" class="instagram-img">
+            <img src="images/Flower Asset/Rectangle 5.png" alt="" class="instagram-img">
+            <img src="images/Flower Asset/Rectangle 6.png" alt="" class="instagram-img">
+        </div>
     </section>
     <section class="footer">
 
