subscribe and latest deals part added

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
             <img src="images/Flower Asset/Rectangle 5.png" alt="" class="instagram-img">
             <img src="images/Flower Asset/Rectangle 6.png" alt="" class="instagram-img">
         </div>
+        
+        <div class="subscribe">
+            <div class="latest-deals">
+                <h2>Get The Latest Deals</h2>
+                <p>$30 coupon for first shopping</p>
+            </div>
+            <div class="subscribe-body">
+                <input type="email" placeholder="Enter your email">
+                <button class="btn-primary">Subscribe</button>
+            </div>
+            
+        </div>
     </section>
     <section class="footer">
 
