footer part added

--- a/index.html
+++ b/index.html
@@ -92,7 +92,16 @@
         </div>
     </section>
     <section class="footer">
-
+        <h2 class="footer-title">
+            <span>Flower</span>Shop
+        </h2>
+        <p class="footer text">
+            It is a long established fact that a reader will be distracted by the readable<br> 
+            content of a page when looking at its layout.
+        </p>
+        <p class="copyright-text">
+            &copy; 2020 - 2023, FlowerShop.com. All rights are reserved.
+        </p>
     </section>
 </body>
 </html>
