banner and service part updated

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         </div>
         <div class="service-info">
             <figure>
-                <img src="images/Flower Asset/Group 57.png" alt="">
+                <img src="images/Flower Asset/Group 57.png" alt="" class="service-img1">
                 <figcaption style="margin-top: 10px; text-align: center;">Same Day Delivery. Click & Collect.</figcaption>
             </figure>
             <figure>
-                <img src="images/Flower Asset/Group 58.png" alt="">
+                <img src="images/Flower Asset/Group 58.png" alt="" class="service-img2">
                 <figcaption style="margin-top: 10px; text-align: center;">Fresh Flowers. Local Growers.</figcaption>
             </figure>
             <figure>
-                <img src="images/Flower Asset/Group 59.png" alt="">
+                <img src="images/Flower Asset/Group 59.png" alt="" class="service-img3">
                 <figcaption style="margin-top: 10px; text-align: center;">24/7 Free Support.</figcaption>
             </figure>
             
