--- a/index.html
+++ b/index.html
@@ -40,19 +40,24 @@
             </figure>
         </div>
         <div class="service-info">
-            <figure>
+            <div class="service-img">
+                <figure>
                 <img src="images/Flower Asset/Group 57.png" alt="" class="service-img1">
-                <figcaption style="margin-top: 10px; text-align: center;">Same Day Delivery. Click & Collect.</figcaption>
+                <figcaption style="margin-top: 15px; text-align: center;">Same Day Delivery. Click & Collect.</figcaption>
             </figure>
-            <figure>
+        </div>
+            <div class="service-img">
+                <figure>
                 <img src="images/Flower Asset/Group 58.png" alt="" class="service-img2">
-                <figcaption style="margin-top: 10px; text-align: center;">Fresh Flowers. Local Growers.</figcaption>
+                <figcaption style="margin-top: 15px; text-align: center;">Fresh Flowers. Local Growers.</figcaption>
             </figure>
-            <figure>
-                <img src="images/Flower Asset/Group 59.png" alt="" class="service-img3">
-                <figcaption style="margin-top: 10px; text-align: center;">24/7 Free Support.</figcaption>
-            </figure>
-            
+        </div>
+            <div class="service-img">
+                <figure>
+                    <img src="images/Flower Asset/Group 59.png" alt="" class="service-img3">
+                    <figcaption style="margin-top: 15px; text-align: center;">24/7 Free Support.</figcaption>
+                </figure>
+            </div>
         </div>
     </section>
     <section class="hot-deal">
