overall design and styles updated

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Flower Shop</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="flower_asset/favicon-img.png" type="image/x-icon">
 </head>
 <body>
+    <!-- banner content(text and image) -->
     <section class="banner-content">
         <div class="banner-text">
             <h2 class="banner-text-header">Let's make <br> beautiful flowers a <br>
@@ -15,51 +17,54 @@
             <button class="btn-primary">Shop Now</button>
         </div>
         <div class="banner-photo">
-            <img class="banner-img" src="images/Flower Asset/pngwing 10.png" alt="">
+            <img class="banner-img" src="flower_asset/pngwing 10.png" alt="">
         </div>
     </section>
+    <!-- featured flowers section(text and images) -->
     <section class="featured-flower">
         <h2 class="featured-flower-title">
             Our Featured Flowers
         </h2>
-        <p class="featured-flower-boody">
+        <p class="featured-flower-body">
             It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
         </p>
         <div class="featured-flower-photos">
             <figure>
-                <img src="images/Flower Asset/pngwing 6.png" alt="" class="featured-flower-image ff-img-1">
+                <img src="flower_asset/pngwing 6.png" alt="" class="featured-flower-image ff-img-1">
                 <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
             </figure>
             <figure>
-                <img src="images/Flower Asset/pngwing 5.png" alt="" class="featured-flower-image ff-img-2">
+                <img src="flower_asset/pngwing 5.png" alt="" class="featured-flower-image ff-img-2">
                 <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
             </figure>
             <figure>
-                <img src="images/Flower Asset/pngwing 7.png" alt="" class="featured-flower-image ff-img-3">
+                <img src="flower_asset/pngwing 7.png" alt="" class="featured-flower-image ff-img-3">
                 <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
             </figure>
         </div>
+        <!-- service info part -->
         <div class="service-info">
             <div class="service-img">
                 <figure>
-                <img src="images/Flower Asset/Group 57.png" alt="" class="service-img1">
+                <img src="flower_asset/Group 57.png" alt="" class="service-img1">
                 <figcaption style="margin-top: 15px; text-align: center;">Same Day Delivery. Click & Collect.</figcaption>
             </figure>
         </div>
             <div class="service-img">
                 <figure>
-                <img src="images/Flower Asset/Group 58.png" alt="" class="service-img2">
+                <img src="flower_asset/Group 58.png" alt="" class="service-img2">
                 <figcaption style="margin-top: 15px; text-align: center;">Fresh Flowers. Local Growers.</figcaption>
             </figure>
         </div>
             <div class="service-img">
                 <figure>
-                    <img src="images/Flower Asset/Group 59.png" alt="" class="service-img3">
+                    <img src="flower_asset/Group 59.png" alt="" class="service-img3">
                     <figcaption style="margin-top: 15px; text-align: center;">24/7 Free Support.</figcaption>
                 </figure>
             </div>
         </div>
     </section>
+    <!-- hot deals section (text and image) -->
     <section class="hot-deal">
         <div class="hot-deal-text">
             <h3>Hot Deal ! Sale Up To 25% <span>Off</span></h3>
@@ -67,23 +72,24 @@
             <button class="btn-primary">Sign Up</button>
         </div>
         <div class="hot-deal-photo">
-            <img src="images/Flower Asset/pngwing 8.png" alt="" class="hot-deal-img">
+            <img src="flower_asset/pngwing 8.png" alt="" class="hot-deal-img">
         </div>
     </section>
+    <!-- instagram section (text and images) -->
     <section class="instagram">
         <h2 class="featured-flower-title">
             Instagram
         </h2>
-        <p class="featured-flower-boody">
+        <p class="featured-flower-body">  
             It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
         </p>
         <div class="instagram-photos">
-            <img src="images/Flower Asset/Flower 01.png" alt="" class="instagram-img">
-            <img src="images/Flower Asset/Rectangle 4.png" alt="" class="instagram-img">
-            <img src="images/Flower Asset/Rectangle 5.png" alt="" class="instagram-img">
-            <img src="images/Flower Asset/Rectangle 6.png" alt="" class="instagram-img">
+            <img src="flower_asset/Flower 01.png" alt="" class="instagram-img">
+            <img src="flower_asset/Rectangle 4.png" alt="" class="instagram-img">
+            <img src="flower_asset/Rectangle 5.png" alt="" class="instagram-img">
+            <img src="flower_asset/Rectangle 6.png" alt="" class="instagram-img">
         </div>
-        
+        <!-- subscription part -->
         <div class="subscribe">
             <div class="latest-deals">
                 <h2>Get The Latest Deals</h2>
@@ -96,6 +102,7 @@
             
         </div>
     </section>
+    <!-- footer section -->
     <section class="footer">
         <h2 class="footer-title">
             <span>Flower</span>Shop
