featured flower part updated

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <div class="featured-flower-photos">
             <figure>
                 <img src="flower_asset/pngwing 6.png" alt="" class="featured-flower-image ff-img-1">
-                <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
+                <figcaption style="font-weight: bold; text-align: center; margin-top: 10px;"><u>Pink Flower Tree</u></figcaption>
             </figure>
             <figure>
                 <img src="flower_asset/pngwing 5.png" alt="" class="featured-flower-image ff-img-2">
-                <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
+                <figcaption style="font-weight: bold; text-align: center; margin-top: 10px;"><u>Pink Flower Tree</u></figcaption>
             </figure>
             <figure>
                 <img src="flower_asset/pngwing 7.png" alt="" class="featured-flower-image ff-img-3">
-                <figcaption style="font-weight: bold; text-align: center;"><u>Pink Flower Tree</u></figcaption>
+                <figcaption style="font-weight: bold; text-align: center; margin-top: 10px;"><u>Pink Flower Tree</u></figcaption>
             </figure>
         </div>
         <!-- service info part -->
